[package]
name = "polygon-data-relay"
version = "0.2.0"
authors = ["Sebastian Rollen <rollenseb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.4"
anyhow = "1.0"
dotenv = "0.15"
rdkafka = { version = "0.23", features = ["ssl-vendored"] }
futures = "0.3"
polygon = { version = "0.3.0", git = "ssh://git@github.com/Overmuse/polygon", branch = "SR/impl_sink", default-features = false, features = ["ws"] }
serde = "1.0"
serde_json = "1.0"
tokio = {version = "1.2", features = ["macros", "rt-multi-thread"]}
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.2"
