[package]
name = "polygon-data-relay"
version = "1.0.1"
authors = ["Sebastian Rollen <rollenseb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.4"
anyhow = "1.0"
config = "0.11.0"
dotenv = "0.15"
futures = "0.3"
kafka-settings = { git = "ssh://git@github.com/Overmuse/kafka-settings", tag = "v0.2.2" }
polygon = { git = "ssh://git@github.com/Overmuse/polygon", tag = "v0.5.0", default-features = false, features = ["ws"] }
rdkafka = { version = "0.26", features = ["ssl-vendored"] }
sentry = { version = "0.21.0", features = ["anyhow"] }
sentry-anyhow = "0.21.0"
serde = "1.0"
serde_json = "1.0"
tokio = {version = "1.2", features = ["macros", "rt-multi-thread"]}
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.2"
